--- a/J2/SymPy.ipynb
+++ b/J2/SymPy.ipynb
@@ -432,6 +432,77 @@
    "source": [
     "latex(Integral(cos(x)**2, (x, 0, pi)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\begin{cases} - \\frac{l^{2} \\cos{\\left(\\pi k \\right)}}{\\pi k} + \\frac{l^{2} \\sin{\\left(\\pi k \\right)}}{\\pi^{2} k^{2}} & \\text{for}\\: k > -\\infty \\wedge k < \\infty \\wedge k \\neq 0 \\\\0 & \\text{otherwise} \\end{cases}$"
+      ],
+      "text/plain": [
+       "Piecewise((-l**2*cos(pi*k)/(pi*k) + l**2*sin(pi*k)/(pi**2*k**2), (k > -oo) & (k < oo) & Ne(k, 0)), (0, True))"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sympy import *\n",
+    "x, k, l = symbols('x k l')\n",
+    "integrate(x*sin(pi*k*x/l), (x, 0, l))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\begin{cases} - \\frac{l^{3} \\cos{\\left(\\pi k \\right)}}{\\pi k} + \\frac{2 l^{3} \\sin{\\left(\\pi k \\right)}}{\\pi^{2} k^{2}} + \\frac{2 l^{3} \\cos{\\left(\\pi k \\right)}}{\\pi^{3} k^{3}} - \\frac{2 l^{3}}{\\pi^{3} k^{3}} & \\text{for}\\: k > -\\infty \\wedge k < \\infty \\wedge k \\neq 0 \\\\0 & \\text{otherwise} \\end{cases}$"
+      ],
+      "text/plain": [
+       "Piecewise((-l**3*cos(pi*k)/(pi*k) + 2*l**3*sin(pi*k)/(pi**2*k**2) + 2*l**3*cos(pi*k)/(pi**3*k**3) - 2*l**3/(pi**3*k**3), (k > -oo) & (k < oo) & Ne(k, 0)), (0, True))"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "integrate(x**2*sin(pi*k*x/l), (x, 0, l))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\begin{cases} \\frac{\\frac{\\pi k}{2} - \\frac{\\sin{\\left(\\pi k \\right)} \\cos{\\left(\\pi k \\right)}}{2}}{\\pi k} & \\text{for}\\: k > -\\infty \\wedge k < \\infty \\wedge k \\neq 0 \\\\0 & \\text{otherwise} \\end{cases}$"
+      ],
+      "text/plain": [
+       "Piecewise(((pi*k/2 - sin(pi*k)*cos(pi*k)/2)/(pi*k), (k > -oo) & (k < oo) & Ne(k, 0)), (0, True))"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "integrate(sin(pi*k*x)**2, (x, 0, 1))"
+   ]
   }
  ],
  "metadata": {
