--- a/J2/SymPy.ipynb
+++ b/J2/SymPy.ipynb
@@ -503,6 +503,31 @@
    "source": [
     "integrate(sin(pi*k*x)**2, (x, 0, 1))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\cos{\\left(f + 2 g \\right)} + \\cos{\\left(3 f + 2 g \\right)}$"
+      ],
+      "text/plain": [
+       "cos(f + 2*g) + cos(3*f + 2*g)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sympy import *\n",
+    "f, g = symbols('f, g')\n",
+    "expand(cos(f+2*g)+cos(3*f+2*g))"
+   ]
   }
  ],
  "metadata": {
